Done: Machine Learning.ipynb

--- a/Data Partition.ipynb
+++ b/Data Partition.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "14b7072b",
    "metadata": {},
    "outputs": [
@@ -35,7 +35,7 @@
        "<pyspark.sql.session.SparkSession at 0x7f9aa405e0a0>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "ae0308a6",
    "metadata": {},
    "outputs": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "d6d60cee",
    "metadata": {},
    "outputs": [
@@ -139,6 +139,16 @@
       "only showing top 5 rows\n",
       "\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "[Stage 8:>                                                          (0 + 1) / 1]\r",
+      "\r",
+      "                                                                                \r"
+     ]
     }
    ],
    "source": [
@@ -168,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "1c341d9c",
    "metadata": {},
    "outputs": [
@@ -176,10 +186,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-12-15 22:36:31,388 WARN conf.HiveConf: HiveConf of name hive.stats.jdbc.timeout does not exist\n",
-      "2024-12-15 22:36:31,388 WARN conf.HiveConf: HiveConf of name hive.stats.retries.wait does not exist\n",
-      "2024-12-15 22:36:56,632 WARN metastore.ObjectStore: Failed to get database global_temp, returning NoSuchObjectException\n",
-      "[Stage 4:================>                                          (2 + 4) / 7]\r"
+      "2024-12-16 22:37:31,114 WARN session.SessionState: METASTORE_FILTER_HOOK will be ignored, since hive.security.authorization.manager is set to instance of HiveAuthorizerFactory.\n",
+      "2024-12-16 22:37:35,337 WARN conf.HiveConf: HiveConf of name hive.internal.ss.authz.settings.applied.marker does not exist\n",
+      "2024-12-16 22:37:35,338 WARN conf.HiveConf: HiveConf of name hive.stats.jdbc.timeout does not exist\n",
+      "2024-12-16 22:37:35,338 WARN conf.HiveConf: HiveConf of name hive.stats.retries.wait does not exist\n",
+      "                                                                                \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data successfully partitioned and saved to Hive!\n"
      ]
     }
    ],
