Update: Machine Learning.ipynb

--- a/Machine Learning.ipynb
+++ b/Machine Learning.ipynb
@@ -497,14 +497,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 61,
    "id": "9aeec77f",
    "metadata": {},
    "outputs": [],
    "source": [
     "# import library\n",
     "import statsmodels.api as sm\n",
-    "from sklearn.metrics import mean_squared_error\n",
+    "from sklearn.metrics import mean_squared_error, mean_absolute_error\n",
     "from statsmodels.graphics.tsaplots import plot_acf, plot_pacf\n",
     "from math import sqrt"
    ]
@@ -708,7 +708,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "e6aa8c7c",
+   "id": "e54d9bef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -745,7 +745,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "ffe9c212",
+   "id": "ed4a95df",
    "metadata": {},
    "outputs": [
     {
@@ -796,6 +796,49 @@
     "plt.legend()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a9b32d4d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Combine train and test sets for full data from 2020-2021\n",
+    "full_data = pd.concat([tem_train, tem_test])\n",
+    "\n",
+    "p, d, q = 1, 1, 1\n",
+    "P, D, Q, s = 1, 1, 1, 24\n",
+    "\n",
+    "# Fit ARIMA model on 2020-2021 data\n",
+    "model = ARIMA(data_2020_2021['Temperature_Celsius'], order=(p, d, q), seasonal_order=(P, D, Q, s))  # Adjust order as needed based on your data\n",
+    "model_fit = model.fit()\n",
+    "\n",
+    "# Forecast future values for the next 2 months\n",
+    "forecast_periods = 24  # Forecast the next 2 months\n",
+    "forecast = model_fit.get_forecast(steps=forecast_periods)\n",
+    "forecast_mean = forecast.predicted_mean\n",
+    "forecast_ci = forecast.conf_int()\n",
+    "\n",
+    "# Plot the forecast\n",
+    "plt.figure(figsize=(16, 6))\n",
+    "plt.plot(data_2020_2021.index, data_2020_2021['Temperature_Celsius'], label='Observed')\n",
+    "plt.plot(forecast_mean.index, forecast_mean, label='Forecast', color='red')\n",
+    "plt.fill_between(forecast_ci.index, forecast_ci.iloc[:, 0], forecast_ci.iloc[:, 1], color='pink')\n",
+    "plt.title(\"Temperature Forecast\")\n",
+    "plt.xlabel(\"Date\")\n",
+    "plt.ylabel(\"Temperature (Celsius)\")\n",
+    "plt.legend()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bbfcc3ef",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
